fix spaceship image overflow

--- a/less/spaceship-sheet.less
+++ b/less/spaceship-sheet.less
@@ -69,7 +69,7 @@
             object-fit: contain;
             border: none;
             height: 190px;
-            flex: 0 50%
+            max-width: 50%;
         }
         .ship-desc {
             text-align: initial;
